test/invalid/static_methods_call.qt
class Bad {
  @methods
    function add() -> int {
      return 1;
    }
}

function main() -> int {
  int y = Bad.add();  
  return y;
}